# SmartHomeTS

./: .dockerignore  .gitignore  CLAUDE.md  README.md  SmartHomeTS.code-workspace
.claude/: settings.local.json
3DModels/: Cap.stl  ModuleBox.stl  SMLSensorCase.scad
BMWConnector/: BMWConnector.slnx  DATAPOINTS.md  SETUP.md  app.py  bimmer.oauth  bmw_mqtt.py  dockerfile  file_utils.py  k8s_utils.py  kube.yaml  readme.md  requirements.txt  secret.create
ChargingController/: ChargingController.sln  Dockerfile  kube.yaml
DataAggregator/: DataAggregator.sln
DataContracts/: AvailabilityData.cs  CheckableItem.cs  ConsumptionData.cs  DataContracts.csproj  DataValueTableEntity.cs
ESP32Firmwares/: Firmwares.code-workspace
ESP32Firmwares/TemperatureDisplay.Firmware/lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_font_Quantico_16.c  ui_font_Quantico_60.c  ui_helpers.c  ui_helpers.h  ui_img_1385145727.c  ui_img_308378252.c  ui_img_456559396.c  ui_img_859317218.c  ui_img_cancel_png.c  ui_img_export_png.c  ui_img_valve_png.c  ui_mainScreen.c  ui_mainScreen.h  ui_themes.cpp  ui_themes.h
EnphaseConnector/: Dockerfile  EnphaseConnector.sln  kube.yaml
Grafana/: grafana-deployment.yaml  grafana-pv.yaml
HeatmeterUSBHead/: HeatmeterUSBHead.sln
HomeAssistant/: kube-pvc.yaml  kube-service.yaml  kube.yaml
Influx/: commands.txt  influxdb-deployment.yaml  influxdb-pv.yaml  influxdb-pvc.yaml  influxdb-service.yaml  mqtt_import.conf  telegraf-config.yaml  telegraf-daemonset.yaml  telegraf-deployment.yaml  telegraf-deploymentyaml
InfluxImporter/: Dockerfile  (+2 more)
(+829 files in other folders)
